--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+build 40 - sep/12/2025
+ - yt_dlp-2025.9.5
+ - dev: pip-25.2
+ - dev: pyinstaller-6.15.0
+
 build 39 - may/12/2025
  - yt_dlp-2025.4.30
  - dev: pip-25.1.1
