--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+build 41 - oct/28/2025
+ - yt-dlp-2025.10.22
+ - dev: pip-25.3
+ - dev: pylint-4.0.2
+
 build 40 - sep/12/2025
  - yt_dlp-2025.9.5
  - dev: pip-25.2
